# rusty_v8_example

./: Cargo.toml  README.md
.github/workflows/: ci.yml  nightly.yml
src/: main.rs
